--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
-  color: #61dafb;
+  color:green;
+}
+.App p{
+  color: purple;
+}
+.sidebar{
+  background-color: pink;
+  height: 100vh;
+  width: 15%;
+}
+.sidebar li{
+  list-style: none;
+  text-decoration: none;
+}
+.sidebar a{
+  text-decoration: none;
+}
+body{
+  margin: -20px;
+  padding: 0px;
+  background-color: lightgray;
+}
+body .tabemp{
+  /* background-color:  lightblue; */
+  margin-top: -100px;
+} 
+
+nav{
+  margin-top:-15px ;
+  background-color: rgb(255, 217, 224);
+  width: 20%;
+  height: 100vh;
+  line-height: 2em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul{
+margin-bottom: 10px;
+}
+.employee{
+  text-align: center;
+}
+table.tabemp {
+  margin:10px 10px;
+  margin-left: 350px;
+  margin-bottom: -50px;
+  /* justify-content: right; */
+
+}
+table{
+  /* border: 1px solid black; */
+  padding: 5px;
+  margin: 0px; 
+}
+th{
+  padding:10px;
+  
+
+}
+td{
+  padding:10px;
+ 
+}
+.emp{
+  margin-top: -650px;
+}
+.addinput{
+  padding:0px 100px;
+  margin-top: -650px;
+  margin-left: 250px;
+  line-height: 2em;
+}
+button{
+  background-color:blue;
+}
+.hellowelcome{
+  text-align: center;
+  background-color:rgb(165, 162, 162);
+  padding: 30px;
+}
+.hellowelcome p{
+  font-size: large;
+  font-weight: bold;
+  
 }
